# confignet

./: Cargo.toml  README.md
.github/workflows/: mdbook.yml
data/labeled/: ci_cd.csv
docs/: book.toml
docs/src/: SUMMARY.md  api.md  classifier-format.md  getting-started.md  how-it-works.md  index.md  integration.md  troubleshooting.md
src/: lib.rs  main.rs
