[package]
name = "confignet"
version = "0.1.0"
edition = "2024"
authors = ["Tanvi Pooranmal Meena <tanvipm19@gmail.com>"]
description = "Classifier to detect CI/CD config files based on file name and MIME label."
license = "MIT OR Apache-2.0"
repository = "https://github.com/kurajo/confignet"
readme = "README.md"
rust-version = "1.85"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
walkdir = "2.4"
regex = "1.10"
lazy_static = "1.4"
phf = "0.11"
rayon = "1.10"
log = "0.4"
csv = "1.3"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"

[lib]
name = "confignet"
path = "src/lib.rs"

[[bin]]
name = "confignet"
path = "src/main.rs"
