[package]
name = "confignet"
version = "0.0.2"
edition = "2024"
authors = ["Tanvi Pooranmal Meena <tanvipm19@gmail.com>"]
description = "Classifier to detect CI/CD config files based on file name and MIME label."
license = "MIT OR Apache-2.0"
repository = "https://github.com/kurajo/confignet"
readme = "README.md"
rust-version = "1.85"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
csv = "1.3"

[lib]
name = "confignet"
path = "src/lib.rs"

[[bin]]
name = "confignet"
path = "src/main.rs"
